--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 art==5.3
 attrs==21.2.0
 black==21.9b0
+certifi==2021.10.8
 cffi==1.14.6
 chardet==4.0.0
+charset-normalizer==2.0.7
 click==8.0.1
 cmd2==2.2.0
 colorama==0.4.4
@@ -12,6 +14,7 @@ flake8==3.9.2
 Flask==2.0.1
 future==0.18.2
 halo==0.0.31
+idna==3.3
 impacket==0.9.23
 itsdangerous==2.0.1
 Jinja2==3.0.1
@@ -34,10 +37,12 @@ pyflakes==2.3.1
 pyOpenSSL==20.0.1
 pyperclip==1.8.2
 pypsexec==0.2.0
+PySocks==1.7.1
 pyspnego==0.2.0
 python-dateutil==2.8.2
 pytz==2021.1
 regex==2021.8.28
+requests==2.26.0
 scapy==2.4.5
 six==1.16.0
 smbprotocol==1.7.0
@@ -46,5 +51,6 @@ tabulate==0.8.9
 termcolor==1.1.0
 tomli==1.2.1
 typing-extensions==3.10.0.2
+urllib3==1.26.7
 wcwidth==0.2.5
 Werkzeug==2.0.1
