grafico dibujado falta poner imagenes

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 
 save/history.json
+.Trash-1000/files/rockyou.2.2.txt.trashinfo
+.Trash-1000/files/rockyou.3.txt.trashinfo
+.Trash-1000/info/rockyou.2.2.2.txt.trashinfo
+.Trash-1000/files/rockyou.2.2.2.txt
