--- a/requirements.txt
+++ b/requirements.txt
@@ -139,3 +139,22 @@ webencodings==0.5.1
 Werkzeug==2.0.1
 widgetsnbextension==3.5.2
 zope.interface==5.4.0
+anyio==3.6.1
+asgiref==3.5.2
+click==8.1.3
+fastapi==0.78.0
+h11==0.13.0
+httptools==0.4.0
+idna==3.3
+Jinja2==3.1.2
+MarkupSafe==2.1.1
+pydantic==1.9.1
+python-dotenv==0.20.0
+PyYAML==6.0
+sniffio==1.2.0
+starlette==0.19.1
+typing_extensions==4.2.0
+uvicorn==0.17.6
+uvloop==0.16.0
+watchgod==0.8.2
+websockets==10.3
